fix: dim colors in xterm output can have low contrast
This PR uses a bit less transparency for the `semi-transparent` css class (which is used to render "dim" colors).

--- a/plugins/plugin-client-common/web/css/static/ui.css
+++ b/plugins/plugin-client-common/web/css/static/ui.css
@@ -347,7 +347,7 @@ code.fancy-code.hljs {
   font-size: 0.875rem;
 }
 .semi-transparent {
-  opacity: 0.7;
+  opacity: 0.8;
 }
 .somewhat-smaller-text {
   font-size: 0.925rem;
